--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/ms-mono-repo/mono-repo.git",
+  "author": "seungyyy <dus3214@gmail.com>",
+  "license": "MIT"
 }
